<resources>
    <string name="app_name">Thời gian biểu</string>

    <string name="trangchu">Trang chủ</string>
    <string name="thoikhoabieu">Thời khóa biểu</string>
    <string name="sukien">Sự kiện</string>
    <string name="monhoc">Môn học</string>
    <string name="caidat">Cài đặt</string>

    <string name="sang">Sáng</string>
    <string name="chieu">Chiều</string>
    <string name="giaodiensang">Sáng</string>
    <string name="giaodientoi">Tối</string>
    <string name="theohethong">Theo hệ thống</string>
    <string name="homnay">"Hôm nay, "</string>
    <string name="homnay2">Hôm nay</string>
    <string name="ngaymai">"Ngày mai, "</string>
    <string name="ngaymai2">Ngày mai</string>
    <string name="homqua">Hôm qua, "</string>

    <string name="cotkhongdeu">Kiểu cột (Không đồng đều)</string>
    <string name="cotdeu">Kiểu cột (Đồng đều)</string>
    <string name="hang">Kiểu hàng</string>

    <!--Demo text-->
    <string name="date_demo" translatable="false">Hôm nay, CN ngày 03/07/2022</string>
    <string name="monhoc1_demo" translatable="false">Phát triển ứng dụng di động</string>
    <string name="monhoc2_demo" translatable="false">Lập trình web</string>
    <string name="title_event_demo" translatable="false">Bảo hành laptop</string>
    <string name="time_event_demo" translatable="false">Ngày mai, 9:30</string>
    <string name="noidung_event_demo" translatable="false">Mang laptop đi bảo hành bàn phím</string>
    <string name="giangvien_demo" translatable="false">Giảng viên:</string>
    <string name="thoigian_monhoc_demo" translatable="false">Thời gian:</string>
    <string name="phonghoc_demo" translatable="false">Phòng:</string>
    <string name="developerName" translatable="false">Lê Anh Chiêu</string>
    <string name="developerEmail" translatable="false">chieu28022000@gmail.com</string>

    <!--Thêm môn học-->
    <string name="them_mon_hoc">Thêm môn học</string>
    <string name="themmonhoc_tenmonhoc">Nhập tên môn học</string>
    <string name="themmonhoc_tengiangvien">Nhập tên giảng viên</string>
    <string name="themmonhoc_phonghoc">Nhập phòng học</string>
    <string name="themmonhoc_ngaybatdau">Ngày bắt đầu</string>
    <string name="themmonhoc_ngayketthuc">Ngày kết thúc</string>
    <string name="themmonhoc_sotuan">Số tuần</string>
    <string name="themmonhoc_sobuoi">Số buổi</string>

    <string name="themmonhoc_T2">T2</string>
    <string name="themmonhoc_T3">T3</string>
    <string name="themmonhoc_T4">T4</string>
    <string name="themmonhoc_T5">T5</string>
    <string name="themmonhoc_T6">T6</string>
    <string name="themmonhoc_T7">T7</string>
    <string name="themmonhoc_CN">CN</string>

    <!--Button-->
    <string name="them">Thêm</string>
    <string name="van_them">Vẫn thêm</string>
    <string name="huy">Hủy</string>
    <string name="update">Cập nhật</string>
    <string name="notification">Thông báo</string>
    <string name="luu">Lưu</string>
    <string name="xoa">Xóa</string>
    <string name="ok">OK</string>
    <string name="dontsave">Không lưu</string>
    <string name="add_event">Thêm sự kiện mới</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="sukien_title">Nhập tiêu đề</string>
    <string name="sukien_content">Nhập nội dung sự kiện</string>
    <string name="sukien_start_date">Bắt đầu lúc</string>
    <string name="sukien_end_date">Kết thúc lúc</string>
    <string name="sukien_notification">Nhắc nhở trước: 0 phút</string>

    <string name="teacher">"Giảng viên: "</string>
    <string name="room">"Phòng học: "</string>
    <string name="time">"Thời gian: "</string>
    <string name="session">" buổi"</string>
    <string name="week">" tuần"</string>
    <string name="duplicate_subject">Trùng lịch học với môn học khác</string>

    <!--Thông báo-->
    <string name="channel_lichhoc">Lịch học</string>
    <string name="channel_lichhoc_description">Các thông báo về lịch học</string>
    <string name="channel_sukien">Sự kiện</string>
    <string name="channel_sukien_description">Các thông báo về sự kiện</string>

    <string name="batdau">Bắt đầu: %s"</string>
    <string name="ketthuc">Kết thúc: %s"</string>
    <string name="nhacnho">Nhắc nhở: </string>
    <string name="themngayhoc">Thêm ngày học</string>
    <string name="chonngayhoc">Chọn ngày học</string>
    <string name="nhapmonhocsang">Nhập môn học sáng</string>
    <string name="nhapmonhocchieu">Nhập môn học chiều</string>
    <string name="themtkb">Thêm thời khoá biểu</string>
    <string name="khongcosukien">Không có sự kiện trong hôm nay</string>
    <string name="trong">Trống</string>
    <string name="confirm_end_monhoc">Thời gian cho môn học này đã kết thúc, xác nhận thêm môn học này</string>
    <string name="thieuthongtin">Thiếu thông tin</string>
    <string name="khongdetrongbuoihoc">Không để trống cả 2 buổi học</string>
    <string name="taikhoanvasaoluu">Tài khoản và sao lưu</string>
    <string name="hienthithoikhoabieudaqua">Hiển thị thời khoá biểu đã qua</string>
    <string name="hienthingayhocdaqua">Hiển thị các ngày học đã qua</string>
    <string name="khonghienthithoikhoabieudaqua">Không hiển thị thời khoá biểu đã qua</string>
    <string name="hienthithoikhoabieutrong">Hiển thị thời khoá biểu trống</string>
    <string name="hienthithoikhoabieutrongOn">Hiển thị thời khoá biểu khi không có lịch học</string>
    <string name="hienthithoikhoabieutrongOff">Không hiển thị thời khoá biểu khi không có lịch học</string>
    <string name="themmonhoc">Thêm môn học vào thời khoá biểu</string>
    <string name="themmonhocOn">Thêm môn học vào thời khoá biểu</string>
    <string name="themmonhocOff">Không thêm môn học vào thời khoá biểu</string>
    <string name="songayhoc">Số ngày học hiển thị tối đa</string>
    <string name="thoikhoabieutrangchu">Thời khoá biểu trên trang chủ</string>
    <string name="sosukientrangchu">Số sự kiện hiển thị trên trang chủ</string>
    <string name="kieusukien">Kiểu hiện thị sự kiện</string>
    <string name="kieusukientrangchu">Kiểu hiện thị sự kiện trên trang chủ</string>
    <string name="socotsukien">Số cột sự kiện</string>
    <string name="caidatungdung">Cài đặt ứng dụng</string>
    <string name="giaodienungdung">Giao diện ứng dụng</string>
    <string name="canhbao">Cảnh báo</string>
    <string name="sukienchualuu">Sự kiện chưa được lưu</string>
    <string name="minute_0">0 phút</string>
    <string name="minute_5">5 phút</string>
    <string name="minute_15">15 phút</string>
    <string name="minute_30">30 phút</string>
    <string name="tuychinh">Tuỳ chỉnh</string>
    <string name="nhactruoc">Nhắc trước: %d phút</string>
    <string name="xinchao">Xin chào!</string>
    <string name="dangnhaptaikhoancuaban">Đăng nhập tài khoản của bạn</string>
    <string name="dangxuat">Đăng xuất</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="themthoikhoabieu">Thêm thời khoá biểu</string>
    <string name="themsukien">Thêm sự kiện</string>
    <string name="chuathem">chưa thêm</string>
    <string name="thoigianmonhocdahet">Thời gian học môn này đã hết</string>
    <string name="ngaybatdaukhonglonhonngayketthuc">Ngày bắt đầu không được lớn hơn ngày kết thúc</string>
    <string name="khongdetrongtenmonhoc">Không để trống tên môn học</string>
    <string name="xacnhandangxuat">Xác nhận đăng xuất</string>
    <string name="xacnhanxoasukien">Xác nhận xoá sự kiện này</string>
    <string name="saithoigian">Sai thời gian</string>
    <string name="thoigianketthucphailonhonbatdau">Thời gian kết thúc phải lớn hơn thời gian bắt đầu</string>
    <string name="sukiendaketthuc">Sự kiện đã kết thúc</string>
    <string name="sukiendangdienra">Sự kiện đang diễn ra</string>
    <string name="saoluulancuoi">Sao lưu lần cuối 15/08 – 22:45</string>
    <string name="loginwithgoogle">Đăng nhập bằng tài khoản Google</string>
    <string name="khoiphuc">Khôi phục</string>
    <string name="saoluu">Sao lưu</string>
    <string name="laplai">Lặp lại</string>
    <string name="backupandrestore">Sao lưu và khôi phục</string>

    <string name="ghichu"><b>Ghi chú:</b> %s</string>
    <string name="xacnhanxoangayhoc">Xác nhận xóa ngày học này</string>
    <string name="xoangaynghi">Xóa ngày nghỉ</string>
    <string name="xoalichnghidadat">Xóa lịch nghỉ đã đặt</string>
    <string name="themlichhocbu">Thêm lịch học bù</string>
    <string name="datngaynghi">Đặt ngày nghỉ</string>
    <string name="datngaynghivataolichhocbu">Đặt thành ngày nghỉ và tạo lịch học bù</string>
    <string name="khongthem">Không thêm</string>
    <string name="themghichu">Thêm ghi chú</string>
    <string name="nhapnoidung">Nhập nội dung</string>
    <string name="importance_high">\tQuan trọng</string>
    <string name="importance_normal">\tBình thường</string>
    <string name="importance_low">\tKhông quan trọng</string>
    <string name="featurenotsupport">Tính năng sao lưu và khôi phục chưa hỗ trợ</string>
</resources>