<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    app:cardCornerRadius="@dimen/corner_radius"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dialog_padding">
            <TextView
                android:id="@+id/tv_monhoc_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/them_mon_hoc"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="25dp"/>
            <EditText
                android:id="@+id/edt_monhoc_dialog_mamonhoc"
                style="@style/edittext_style"
                android:hint="@string/themmonhoc_mamonhoc" />
            <EditText
                android:id="@+id/edt_monhoc_dialog_tenmonhoc"
                style="@style/edittext_style"
                android:hint="@string/themmonhoc_tenmonhoc" />
            <EditText
                android:id="@+id/edt_monhoc_dialog_tengiangvien"
                style="@style/edittext_style"
                android:hint="@string/themmonhoc_tengiangvien" />
            <EditText
                android:id="@+id/edt_monhoc_dialog_phonghoc"
                style="@style/edittext_style"
                android:hint="@string/themmonhoc_phonghoc" />
            <TextView
                android:id="@+id/tv_monhoc_dialog_ngaybatdau"
                style="@style/edittext_style"
                android:hint="@string/themmonhoc_ngaybatdau" />
            <LinearLayout
                android:id="@+id/linear_monhoc_dialog_BuoiHoc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/custom_edittext"
                android:gravity="center"
                android:weightSum="7"
                android:layout_marginBottom="10dp">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/themmonhoc_T2"
                        android:textSize="@dimen/dayofweek_size"
                        android:textStyle="bold"/>
                    <android.widget.CheckBox
                        android:id="@+id/T2S"
                        style="@style/checkbox_style"/>
                    <android.widget.CheckBox
                        android:id="@+id/T2C"
                        style="@style/checkbox_style" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/themmonhoc_T3"
                        android:textSize="@dimen/dayofweek_size"
                        android:textStyle="bold"/>
                    <android.widget.CheckBox
                        android:id="@+id/T3S"
                        style="@style/checkbox_style"/>
                    <android.widget.CheckBox
                        android:id="@+id/T3C"
                        style="@style/checkbox_style" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/themmonhoc_T4"
                        android:textSize="@dimen/dayofweek_size"
                        android:textStyle="bold"/>
                    <android.widget.CheckBox
                        android:id="@+id/T4S"
                        style="@style/checkbox_style"/>
                    <android.widget.CheckBox
                        android:id="@+id/T4C"
                        style="@style/checkbox_style" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/themmonhoc_T5"
                        android:textSize="@dimen/dayofweek_size"
                        android:textStyle="bold"/>
                    <android.widget.CheckBox
                        android:id="@+id/T5S"
                        style="@style/checkbox_style"/>
                    <android.widget.CheckBox
                        android:id="@+id/T5C"
                        style="@style/checkbox_style" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/themmonhoc_T6"
                        android:textSize="@dimen/dayofweek_size"
                        android:textStyle="bold"/>
                    <android.widget.CheckBox
                        android:id="@+id/T6S"
                        style="@style/checkbox_style"/>
                    <android.widget.CheckBox
                        android:id="@+id/T6C"
                        style="@style/checkbox_style" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/themmonhoc_T7"
                        android:textSize="@dimen/dayofweek_size"
                        android:textStyle="bold"/>
                    <android.widget.CheckBox
                        android:id="@+id/T7S"
                        style="@style/checkbox_style"/>
                    <android.widget.CheckBox
                        android:id="@+id/T7C"
                        style="@style/checkbox_style" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/themmonhoc_CN"
                        android:textSize="@dimen/dayofweek_size"
                        android:textStyle="bold"/>
                    <android.widget.CheckBox
                        android:id="@+id/T1S"
                        style="@style/checkbox_style"/>
                    <android.widget.CheckBox
                        android:id="@+id/T1C"
                        style="@style/checkbox_style" />
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_monhoc_dialog_ngayketthuc"
                style="@style/edittext_style"
                android:hint="@string/themmonhoc_ngayketthuc"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">
                <EditText
                    android:id="@+id/edt_monhoc_dialog_sotuan"
                    style="@style/edittext_style"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:hint="@string/themmonhoc_sotuan"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="0dp"
                    android:inputType="numberSigned"/>
                <EditText
                    android:id="@+id/edt_monhoc_dialog_sobuoi"
                    style="@style/edittext_style"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:hint="@string/themmonhoc_sobuoi"
                    android:inputType="numberSigned"
                    android:layout_marginBottom="0dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end"
                android:layout_marginTop="25dp">
                <android.widget.Button
                    android:id="@+id/btn_monhoc_huy"
                    style="@style/button_style"
                    android:layout_marginEnd="@dimen/button_margin"
                    android:background="@drawable/custom_button_cancel"
                    android:text="@string/huy"/>
                <android.widget.Button
                    android:id="@+id/btn_monhoc_them"
                    style="@style/button_style"
                    android:background="@drawable/custom_button_ok"
                    android:text="@string/them"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.cardview.widget.CardView>