<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_monhoc"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/corner_radius"
    app:cardElevation="@dimen/cardElevation">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/item_background"
        android:padding="@dimen/item_padding">
        <TextView
            android:id="@+id/tv_monhoc_tenmonhoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/monhoc1_demo"
            android:textColor="@color/text_title_yellow"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:id="@+id/tv_monhoc_tengiangvien"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/giangvien_demo"
            android:padding="0dp"/>
        <TextView
            android:id="@+id/tv_monhoc_thoigian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/thoigian_monhoc_demo"
            android:padding="0dp"/>
        <TextView
            android:id="@+id/tv_monhoc_phonghoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/phonghoc_demo"
            android:padding="0dp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>