<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="300dp"
    android:minHeight="150dp"
    android:background="@drawable/background_sukien"
    android:orientation="vertical"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:paddingStart="7dp"
    android:paddingEnd="7dp">
        <TextView
            android:id="@+id/tv_widget_sukien_tieude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_event_demo"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_gravity="top|start"
            android:textColor="@color/text_title_yellow"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end|center_vertical"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="2dp">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/text_title_yellow"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/tv_widget_sukien_thoigian"
                android:alpha="0.25"/>
            <TextView
                android:id="@+id/tv_widget_sukien_thoigian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:textStyle="bold"
                android:textColor="@color/text_color"
                android:layout_alignParentEnd="true"
                android:text="@string/time_event_demo"
                android:alpha="0.75"
                tools:ignore="SmallSp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/tv_widget_sukien_noidung"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:text="@string/noidung_event_demo"
            android:textSize="16sp"
            android:maxLines="4"/>
</LinearLayout>